--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,159 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+body {
+  background-color: rgba(48, 47, 44, 0.081);
+  font-size: 12px;
+  color: rgba(46, 47, 66, 1);
+  min-height: 100vh;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.main {
+  padding: 35px 0;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.form input {
+  border: 1px solid rgba(128, 128, 128, 1);
+  outline: none;
+  padding: 8px 15px;
+  color: inherit;
+  border-radius: 4px;
+}
+
+button {
+  background-color: rgba(78, 117, 255, 1);
+  border: none;
+  color: #ffffff;
+  padding: 8px 15px;
+  border-radius: 8px;
+  transition: .3s;
+}
+
+button:hover {
+  background-color: rgba(108, 140, 255, 1);
+}
+
+.btn-container {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.form input::placeholder {
+  color: rgba(128, 128, 128, 1);
+}
+.form input:hover {
+  border: 1px solid rgba(0, 0, 0, 1);
+}
+.form input:focus {
+  border: 1px solid rgba(78, 117, 255, 1);
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  flex-wrap: wrap;
+}
+
+.gallery .gallery-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 360px;
+  height: 300px;
+  border: 1px solid rgba(128, 128, 128, 1);
+}
+
+.gallery .gallery-link {
+  height: 250px;
+  overflow: hidden;
+}
+
+.gallery .info {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  align-items: center;
+}
+
+.gallery .info .item {
+  text-align: center;
+}
+
+.gallery .info .bold {
+  font-weight: 600;
+}
+
+.load-more, .loader {
+  display: none;
+}
+
+/***** LOADER ***********/
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1) rotate(0);
+  width: 164px;
+  height: 164px;
+  perspective: 300px;
+}
+.loader::before  {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-image:
+    radial-gradient(circle 15px, #FF3D00 100%, transparent 0),
+    radial-gradient(circle 15px, #FF3D00 100%, transparent 0),
+    linear-gradient(#FF3D00 100px, transparent 0),
+    linear-gradient(#FF3D00 100px, transparent 0);
+  background-repeat: no-repeat;
+  background-size: 30px 30px, 30px 30px, 40% 2px, 40% 2px;
+  background-position: left center, right center, left center, right center;
+  animation: rotateY 1s linear infinite;
+}
+.loader::after  {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-image:
+    radial-gradient(circle 15px, #fff 100%, transparent 0),
+    radial-gradient(circle 15px, #fff 100%, transparent 0),
+    linear-gradient(#fff 100px, transparent 0),
+    linear-gradient(#fff 100px, transparent 0);
+  background-repeat: no-repeat;
+  background-size: 30px 30px, 30px 30px, 2px 40% , 2px 40%;
+  background-position: top center, bottom center, top center, bottom center;
+  animation: rotateX 1s linear infinite;
+}
+
+@keyframes rotateY {
+  0%{ transform: rotateY(0deg)}
+  100% { transform: rotateY(-180deg)}
+}
+@keyframes rotateX {
+  0%, 25% { transform: rotateX(0deg)}
+  75%,  100% { transform: rotateX(-180deg)}
+}
+  
